--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             It's a smaller font and the color is lower contrast.
           </div>
           <div class="sign-up-button">
-            Sign up
+           <button>Sign up</button>
           </div>
           <div class="image">this is a placeholder for an image</div>
         </div>
@@ -32,14 +32,36 @@
             <div class="cards-title">
                 Some random information.
             </div>
-            <div class="cards">blank</div>
+            <div class="cards">rectangle</div>
             <p>this is some subtext under an illustration or image</p>
-            <div class="cards">blank</div>
+            <div class="cards">rectangle</div>
             <p>this is some subtext under an illustration or image</p>
-            <div class="cards">blank</div>
+            <div class="cards">rectangle</div>
             <p>this is some subtext under an illustration or image</p>
-            <div class="cards">blank</div>
+            <div class="cards">rectangle</div>
             <p>this is some subtext under an illustration or image</p>
+        </div>
+        <div class="quote">
+          <div class="actual-quote">
+            This is an inspiring quote, or a testimonial from a customer.
+            Maybe it's just filling up space, or maybe people will actually read it.
+            Who knows ? All i know is that it looks nice.
+          </div>
+          <div class="quote-signature">
+            -Thor, God of Thunder
+          </div>
+        </div>
+        <div class="call-banner-space">
+          <div class="call-banner">
+            Call to action! It's time! </br>
+            Sign up for our product by clicking that button right over there!
+          </div>
+          <div class="sign-up-button">
+            <button>Sign up</button>
+          </div>
+        </div>
+        <div class="footer">
+          Copyright @ The Odin Project 2021
         </div>
         </div>
     </body>
