--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <title>Landing Page</title>
+        <link rel="stylesheet" href="style.css">
     </head>
     <body>
         <div class="header">
@@ -55,11 +56,11 @@
           <div class="call-banner">
             Call to action! It's time! </br>
             Sign up for our product by clicking that button right over there!
+            <div class="sign-up-button">
+              <button>Sign up</button>
+            </div>
           </div>
-          <div class="sign-up-button">
-            <button>Sign up</button>
           </div>
-        </div>
         <div class="footer">
           Copyright @ The Odin Project 2022
         </div>
