--- a/index.html
+++ b/index.html
@@ -27,19 +27,19 @@
           <div class="sign-up-button">
            <button>Sign up</button>
           </div>
-          <div class="image">this is a placeholder for an image</div>
+          <div class="image"><img src="/images/junior.jpg"></div>
         </div>
         <div class="cards-place">
             <div class="cards-title">
                 Some random information.
             </div>
-            <div class="cards">rectangle</div>
+            <div class="cards"><img src="/images/black.jpg"></div>
             <p>this is some subtext under an illustration or image</p>
-            <div class="cards">rectangle</div>
+            <div class="cards"><img src="/images/tongue.jpg"></div>
             <p>this is some subtext under an illustration or image</p>
-            <div class="cards">rectangle</div>
+            <div class="cards"><img src="/images/grey1.jpg"></div>
             <p>this is some subtext under an illustration or image</p>
-            <div class="cards">rectangle</div>
+            <div class="cards"><img src="/images/grey2.jpg"></div>
             <p>this is some subtext under an illustration or image</p>
         </div>
         <div class="quote">
