Added local CSS and applied it

--- a/index.html
+++ b/index.html
@@ -4,6 +4,12 @@
         <meta charset="UTF-8">
         <title>Landing Page</title>
         <link rel="stylesheet" href="style.css">
+        <style type="text/css">
+          @font-face {
+            font-family: "Roboto";
+            src: url(/fonts/Roboto-Regular.ttf);
+          }
+        </style>
     </head>
     <body>
         <div class="header">
