--- a/index.html
+++ b/index.html
@@ -35,18 +35,22 @@
           </div>
           <div class="image"><img src="/images/junior.jpg"></div>
         </div>
+        <div class="cards-title">
+          Some random information.
+        </div>
         <div class="cards-place">
-            <div class="cards-title">
-                Some random information.
-            </div>
-            <div class="cards"><img src="/images/black.jpg"></div>
+          <div class="cards"><img src="/images/black.jpg">
             <p>this is some subtext under an illustration or image</p>
-            <div class="cards"><img src="/images/tongue.jpg"></div>
+          </div>
+          <div class="cards"><img src="/images/tongue.jpg">
             <p>this is some subtext under an illustration or image</p>
-            <div class="cards"><img src="/images/grey1.jpg"></div>
+          </div>
+          <div class="cards"><img src="/images/grey1.jpg">
             <p>this is some subtext under an illustration or image</p>
-            <div class="cards"><img src="/images/grey2.jpg"></div>
+          </div>
+          <div class="cards"><img src="/images/grey2.jpg">
             <p>this is some subtext under an illustration or image</p>
+          </div>
         </div>
         <div class="quote">
           <div class="actual-quote">
