Worked on FlexBox layout

--- a/index.html
+++ b/index.html
@@ -33,22 +33,22 @@
           <div class="sign-up-button">
            <button>Sign up</button>
           </div>
-          <div class="image"><img src="/images/junior.jpg"></div>
+          <div class="image"><img src="/images/junior.jpg" alt="A picture of a young black cat"></div>
         </div>
         <div class="cards-title">
           Some random information.
         </div>
         <div class="cards-place">
-          <div class="cards"><img src="/images/black.jpg">
+          <div class="cards"><img src="/images/black.jpg" alt="A picture of a black cat">
             <p>this is some subtext under an illustration or image</p>
           </div>
-          <div class="cards"><img src="/images/tongue.jpg">
+          <div class="cards"><img src="/images/tongue.jpg" alt="A picture of a cat with its tongue out">
             <p>this is some subtext under an illustration or image</p>
           </div>
-          <div class="cards"><img src="/images/grey1.jpg">
+          <div class="cards"><img src="/images/grey1.jpg" alt="A picture of a grey cat">
             <p>this is some subtext under an illustration or image</p>
           </div>
-          <div class="cards"><img src="/images/grey2.jpg">
+          <div class="cards"><img src="/images/grey2.jpg" alt="A picture of an another grey cat">
             <p>this is some subtext under an illustration or image</p>
           </div>
         </div>
@@ -64,8 +64,10 @@
         </div>
         <div class="call-banner-space">
           <div class="call-banner">
-            Call to action! It's time! </br>
-            Sign up for our product by clicking that button right over there!
+            <div class="call-time">
+              <p>Call to action! It's time!</p>
+            </div>
+            <p>Sign up for our product by clicking that button right over there!</p>
             <div class="sign-up-button">
               <button>Sign up</button>
             </div>
