--- a/index.html
+++ b/index.html
@@ -23,15 +23,17 @@
             </div>
         </div>
         <div class="sub-header">
-          <div class="main-title">
-            This website is awesome
-          </div>
-          <div class="subtext">
-            This website has some subtext that goes here under the main title.
-            It's a smaller font and the color is lower contrast.
-          </div>
-          <div class="sign-up-button">
-           <button>Sign up</button>
+          <div class="sub-header-text">
+            <div class="main-title">
+              This website is awesome
+            </div>
+            <div class="subtext">
+              This website has some subtext that goes here under the main title.
+              It's a smaller font and the color is lower contrast.
+            </div>
+            <div class="sign-up-button">
+            <button>Sign up</button>
+            </div>
           </div>
           <div class="image"><img src="/images/junior.jpg" alt="A picture of a young black cat"></div>
         </div>
@@ -62,16 +64,14 @@
             -Thor, God of Thunder
           </div>
         </div>
-        <div class="call-banner-space">
           <div class="call-banner">
             <div class="call-time">
-              <p>Call to action! It's time!</p>
+              <p><strong>Call to action! It's time!</strong></p>
+              <p>Sign up for our product by clicking that button right over there!</p>
             </div>
-            <p>Sign up for our product by clicking that button right over there!</p>
             <div class="sign-up-button">
               <button>Sign up</button>
             </div>
-          </div>
           </div>
         <div class="footer">
           Copyright @ The Odin Project 2022
