--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@
             -Thor, God of Thunder
           </div>
         </div>
+        <div class="call-box">
           <div class="call-banner">
             <div class="call-time">
               <p><strong>Call to action! It's time!</strong></p>
@@ -73,6 +74,7 @@
               <button>Sign up</button>
             </div>
           </div>
+        </div>
         <div class="footer">
           Copyright @ The Odin Project 2022
         </div>
