--- a/index.html
+++ b/index.html
@@ -12,16 +12,16 @@
         </style>
     </head>
     <body>
-        <div class="header">
-            <div class="logo"> 
-                Header Logo
-            </div>
-            <div class="header-links">
-                <a href="">header link one</a>
-                <a href="">header link two</a>
-                <a href="">header link three</a>
-            </div>
+      <div class="header">
+        <div class="logo"> 
+          Header Logo
         </div>
+        <div class="header-links">
+          <a href="">header link one</a>
+          <a href="">header link two</a>
+          <a href="">header link three</a>
+        </div>
+      </div>
         <div class="sub-header">
           <div class="sub-header-text">
             <div class="main-title">
@@ -37,21 +37,23 @@
           </div>
           <div class="image"><img src="/images/junior.jpg" alt="A picture of a young black cat"></div>
         </div>
-        <div class="cards-title">
-          Some random information.
-        </div>
-        <div class="cards-place">
-          <div class="cards"><img src="/images/black.jpg" alt="A picture of a black cat">
-            <p>this is some subtext under an illustration or image</p>
+        <div class="cards-box">
+          <div class="cards-title">
+            Some random information.
           </div>
-          <div class="cards"><img src="/images/tongue.jpg" alt="A picture of a cat with its tongue out">
-            <p>this is some subtext under an illustration or image</p>
-          </div>
-          <div class="cards"><img src="/images/grey1.jpg" alt="A picture of a grey cat">
-            <p>this is some subtext under an illustration or image</p>
-          </div>
-          <div class="cards"><img src="/images/grey2.jpg" alt="A picture of an another grey cat">
-            <p>this is some subtext under an illustration or image</p>
+          <div class="cards-place">
+            <div class="cards"><img src="/images/black.jpg" alt="A picture of a black cat">
+              <p>this is some subtext under an illustration or image</p>
+            </div>
+            <div class="cards"><img src="/images/tongue.jpg" alt="A picture of a cat with its tongue out">
+              <p>this is some subtext under an illustration or image</p>
+            </div>
+            <div class="cards"><img src="/images/grey1.jpg" alt="A picture of a grey cat">
+              <p>this is some subtext under an illustration or image</p>
+            </div>
+            <div class="cards"><img src="/images/grey2.jpg" alt="A picture of an another grey cat">
+              <p>this is some subtext under an illustration or image</p>
+            </div>
           </div>
         </div>
         <div class="quote">
@@ -77,7 +79,6 @@
         </div>
         <div class="footer">
           Copyright @ The Odin Project 2022
-        </div>
         </div>
     </body>
 </html>
